--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ body {
 
 
 nav {
-    position: fixed;
+    position: sticky;
     top: 0;
-    width: 100%;
+    width: 100;
     display: flex;
     justify-content: space-between;
     align-items: center;
