--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 nav {
     position: sticky;
     top: 0;
-    width: 100;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
